--- a/src/common/colors.css
+++ b/src/common/colors.css
@@ -6,3 +6,6 @@
 @value makerGrey: #626262;
 @value makerGreen: #385461;
 @value makerblue: #1cb6e0;
+@value makerShadow: rgba(217, 217, 217, 1);
+@value makerColorful: linear-gradient(red, yellow, green);
+@value makerWheat: wheat;
